Closed Bug 380612 Opened 17 years ago Closed 17 years ago

[FIX]When prettyprinting, don't start layout until stylesheets load

Categories

(Core :: XML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha6

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

(Blocks 1 open bug)

Details

(Keywords: perf)

Attachments

(1 file)

Attached patch FixSplinter Review
The CSSLoader changes are mostly straightforward -- they're needed to make HasPendingLoads() play nice when called from StyleSheetLoaded.  The one exception to that is the change

-    SheetLoadData* curData = mPostedEvents[i-1];
...
+    SheetLoadData* curData = mPostedEvents[i];

The old indexing is wrong; good thing that it's trunk-only and such!

The rest of the changes should be self-explanatory, I think.

This patch speeds up the testcase in bug 291643 by about 40% over here.
Attachment #264720 - Flags: superreview?(jonas)
Attachment #264720 - Flags: review?(jonas)
Attachment #264720 - Flags: superreview?(jonas)
Attachment #264720 - Flags: superreview+
Attachment #264720 - Flags: review?(jonas)
Attachment #264720 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Blocks: 490976
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: