Add an API to observe all loads in a CSSLoader.  Change XML prettyprinting tonot start layout till after the prettyprinter stylesheet is loaded, so we don'treflow and reconstruct the whole thing twice.  Bug 380612, r+sr=sicking